--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   dev:
-    runs-on: [blacksmith-8vcpu-ubuntu-2204, linux]
+    runs-on: runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
